--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-group" *ngIf="this.forma.errors?.validandoIgual && !this.forma.pristine && this.forma.controls['password2'].dirty">
+                <div class="form-group" *ngIf="this.forma.errors?.validandoIgual && this.forma.controls['password'].dirty && this.forma.controls['password2'].dirty && clikeado">
                     <p class="text-danger">
                         Las contraseñas no son iguales
                     </p>
@@ -52,7 +52,7 @@
                 </div>
                 <div class="form-group m-b-0">
                     <div class="col-sm-12 text-center">
-                        <p>Already have an account? <a href="pages-login-2.html" class="text-info m-l-5"><b>Sign In</b></a></p>
+                        <p>Already have an account? <a routerLink="/login" class="text-info m-l-5"><b>Sign In</b></a></p>
                     </div>
                 </div>
             </form>
